# musculouskeletal-calculator

./: .gitignore  README.md  assessment_data.json  package-lock.json  package.json  유해요인조사 평가지.xlsx
frontend/: index.html  main.js  skeleton.js  skeleton2d.js  skeleton3d.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: calc.rs  data.rs  main.rs
