[package]
name = "msd-assessment"
version = "0.1.0"
description = "근골격계 평가 (RULA/REBA/OWAS) 데스크톱 앱"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# 이 크레이트는 기본적으로 Tauri 커스텀 명령을 사용한다.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
